notification-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notif-service-service
  namespace: hub
spec:
  selector:
    app: go-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
